# bob

./: Makefile  README.md  cli.py  pyproject.toml  requirements.bob  setup.py
bob/: __init__.py  cli.py
