[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bob-pkg"
version = "0.1.2"
description = "A minimalist Python package manager"
authors = [{name = "MOG.", email = "caiiummog@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
bob = "bob.cli:main"
